force-app/main/default/objects/SVMXA360__CONF_PicklistDefinition__c/SVMXA360__CONF_PicklistDefinition__c.object-meta.xml
<CustomObject>
    <description>This object stores the picklist values used in attributes.</description>
    <label>Picklist Definition</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Picklist Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Picklist Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>