force-app/main/default/objects/SVMXA360__CONF_PicklistDefinition__c/fields/SVMXA360__DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DefaultValue__c</fullName>
    <description>Holds the default value for this picklist</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Holds the default value for this picklist</inlineHelpText>
    <label>Default Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>