force-app/main/default/objects/SVMXA360__CONF_PicklistDefinition__c/fields/SVMXA360__Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Type__c</fullName>
    <description>Module</description>
    <inlineHelpText>Module</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical Attribute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>