force-app/main/default/objects/SVMXA360__CONF_PicklistDefinition__c/fields/SVMXA360__Values__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Values__c</fullName>
    <description>List of picklist values saved as a JSON structure.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>List of picklist values saved as a JSON structure.</inlineHelpText>
    <label>Values</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>